# iqtranslit

./: README.md  STANDARDS.md  STANDARTS.md  build.gradle  settings.gradle  translit_output.txt
python/: pyproject.toml
python/src/iqtranslit_py/: __init__.py  diacritics.py  engine.py  models.py  rules.py  scheme_ruleset.py  service.py
python/tests/: test_transliteration_service.py
src/main/java/ru/iqtranslit/: IqTranslit.java
src/main/java/ru/iqtranslit/api/: TransliterationRequest.java  TransliterationResult.java  TransliterationService.java  TransliterationStringOutput.java  TransliterationVariant.java
src/main/java/ru/iqtranslit/engine/: DefaultTransliterationService.java  DiacriticSimplifier.java  TransliterationEngine.java
src/main/java/ru/iqtranslit/model/: StandardScheme.java
src/main/java/ru/iqtranslit/rules/: RuleSetRegistry.java  SchemeRuleSet.java
src/test/java/ru/iqtranslit/: TransliterationServiceTest.java
src/test/resources/: strict_regression_cases.tsv
