[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "iqtranslit-py"
version = "0.1.0"
description = "Russian transliteration library parity with Java iqtranslit"
readme = "../README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
test = ["pytest>=8.0.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
